--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,116 @@
 
 .exemplo-back{
     height: 300px;
-    background-color: black;
-    background-image:url("/seguro-bicicleta-porto-seguro.webp");
+    
+    background-image:url("");
+}
+
+.imagem{
+    background-image: url(../slaaaa.webp);
+    background-repeat: no-repeat;
+    background-size: 100%;
+}
+a{
+    color: aliceblue;
+    font-size: 25px;
+    text-decoration: none;
+}
+h1{
+    font-size: 50px;
+}
+li{
+    list-style-type: none;
+}
+.imagens{
+    background-image: url(../fotopgrupo.jpg);
+    background-repeat: no-repeat;
+    background-size: 100%;
+}
+.kaua{
+    width: 150px;
+    height: 150px;
+    position: absolute;
+    top: 190px;
+    left: 350px;
+}
+.victor{
+    width: 150px;
+    height: 150px;
+    position: absolute;
+    top: 200px;
+    left: 0px;
+}
+.gabriel{
+    width: 150px;
+    height: 150px;
+    position: absolute;
+    top: 153px;
+    left: 700px;
+}
+.pakistao{
+    width: 150px;
+    height: 150px;
+    position: absolute;
+    top: 193px;
+    left: 1100px;
+}
+.biel{
+    width: 150px;
+    height: 150px;
+    position: absolute;
+    top: 185px;
+    left: 1500px;
+}
+
+p{
+    font-size: 25px;
+    color: black;
+}
+.rmV{
+    width: 150px;
+    height: 150px;
+    position: absolute;
+    top: 420px;
+    left: 0px;
+    font-size: 15px;
+}
+.rmK{
+    width: 150px;
+    height: 150px;
+    position: absolute;
+    top: 420px;
+    left: 350px;
+    font-size: 15px;
+}
+.rmG{
+    width: 150px;
+    height: 150px;
+    position: absolute;
+    top: 430px;
+    left: 700px;
+    font-size: 15px;
+}
+.rmP{
+    width: 150px;
+    height: 150px;
+    position: absolute;
+    top: 420px;
+    left: 1100px;
+    font-size: 15px;
+}
+.rmB{
+    width: 150px;
+    height: 150px;
+    position: absolute;
+    top: 420px;
+    left: 1500px;
+    font-size: 15px;
+}
+.voltar{
+    width: 150px;
+    height: 150px;
+    position: absolute;
+    top: 930px;
+    left: 0px;
+    font-size: 15px;
 }
